--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin: auto;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 10px 8px;
+  margin-top: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin-top: 10px ;
+  padding: 10px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 20px;
+  display: block;
+  margin: 0 auto;
 }
