Add solutions for flex exercises 01 02 and 03

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px;
 }
 
 .profile-image {
@@ -45,4 +49,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding: 0;
+}
+
+.left{
+  display: flex;
+  flex-grow: 1;
+  gap: 8px;
 }
