--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -24,4 +28,43 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+
+
+.header{
+  display: flex;
+  justify-content:  space-between;
+  padding: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+ul{
+  display: flex;
+  gap: 10px;
+  padding: 0;
+}
+
+li{
+  list-style: none;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  gap:16px;
+
+}
+
+
+.footer{
+  padding: 8px;
+  background-color: lightgrey;
 }
