--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,75 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 1.7rem;
+  font-weight: bold;
+  padding: 10px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px;
+  
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 200px;
+  height: 200px;
+  color: black;
+  font-weight: 500;
+  padding: 20px;
+
+}
+
+.content{
+  display: flex;
+  flex: 1;
+}
+
+
+.cards-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 2rem 7rem 2rem 0;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 0.8rem;
+  
+}
+
+
+ul{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  
+}
+
+ul a{
+  text-decoration: none;
+  color: white;
 }
